force-app/main/default/objects/CollaborationRequest__c/CollaborationRequest__c.object-meta.xml
<CustomObject>
    <label>Collaboration Request</label>
    <nameField>
        <displayFormat>CR-{00000}</displayFormat>
        <label>Collaboration Request</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Collaboration Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>