force-app/main/default/objects/CollaborationRequest__c/fields/QuoteId__c.field-meta.xml
<CustomField>
    <fullName>QuoteId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>Quote__c</referenceTo>
    <relationshipLabel>Collaboration Requests</relationshipLabel>
    <relationshipName>CollaborationRequests</relationshipName>
    <type>Lookup</type>
</CustomField>