force-app/main/default/objects/CollaborationRequest__c/fields/SectionId__c.field-meta.xml
<CustomField>
    <fullName>SectionId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Section</label>
    <referenceTo>QuoteSection__c</referenceTo>
    <relationshipLabel>Collaboration Requests</relationshipLabel>
    <relationshipName>CollaborationRequests</relationshipName>
    <type>Lookup</type>
</CustomField>