force-app/main/default/objects/CollaborationRequest__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Ready to Merge</fullName>
            </value>
            <value>
                <fullName>Merged</fullName>
            </value>
            <value>
                <fullName>Revoked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>